--- a/index.html
+++ b/index.html
@@ -86,4 +86,50 @@
         const displayDate = new Date(todayData[0]?.timestamp).toLocaleDateString();
         document.getElementById('dateLabel').textContent = `${displayDate} の風向・天気`;
 
-        const amRow = document.getElem
+        const amRow = document.getElementById('amRow');
+        const pmRow = document.getElementById('pmRow');
+
+        todayData.forEach(entry => {
+          const time = new Date(entry.timestamp);
+          const hour = time.getHours();
+          const timeStr = time.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+
+          const windDeg = (parseFloat(entry.windDeg) + 180) % 360; // 風下向きに変換
+          const windSpeed = parseFloat(entry.windSpeed);
+          const iconCode = entry.icon;
+          const iconUrl = `https://openweathermap.org/img/wn/${iconCode}@2x.png`;
+
+          const entryDiv = document.createElement('div');
+          entryDiv.className = 'entry';
+
+          const arrow = document.createElement('div');
+          arrow.className = 'arrow';
+          arrow.style.borderBottomWidth = `${8 + windSpeed * 2}px`; // 風速に応じて太く
+          arrow.style.transform = `rotate(${windDeg}deg)`;
+          if (isNorthEastDirection(windDeg)) arrow.classList.add('highlight');
+
+          const iconImg = document.createElement('img');
+          iconImg.className = 'icon';
+          iconImg.src = iconUrl;
+          iconImg.alt = entry.description ?? '';
+
+          const timeLabel = document.createElement('div');
+          timeLabel.textContent = timeStr;
+
+          entryDiv.appendChild(arrow);
+          entryDiv.appendChild(iconImg);
+          entryDiv.appendChild(timeLabel);
+
+          if (hour < 12) {
+            amRow.appendChild(entryDiv);
+          } else {
+            pmRow.appendChild(entryDiv);
+          }
+        });
+      })
+      .catch(err => {
+        document.body.innerHTML += `<p style="color:red;">データ取得エラー: ${err}</p>`;
+      });
+  </script>
+</body>
+</html>
