--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <div class="timeline" id="pmTimeline"></div>
 
   <script>
+    console.log(entry);
     const apiBase = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← Apps Script の公開URL
     const urlParams = new URLSearchParams(window.location.search);
     const dateParam = urlParams.get('date');
