--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       border-bottom: 20px solid gray;
       transform-origin: bottom center;
       transition: all 0.3s ease;
+      margin-bottom: 6px; /* ← 時刻との間隔 */
+    }
+    .timestamp {
+      margin-bottom: 6px; /* ← アイコンとの間隔 */
     }
 
     .highlight {
