--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       border-bottom: 20px solid gray;
       transform-origin: bottom center;
       transition: all 0.3s ease;
-      margin-bottom: 20px; /* ← 時刻との間隔 */
     }
     .timestamp {
+      margin-top: 20px; /* ← 時刻との間隔 */
       margin-bottom: 6px; /* ← アイコンとの間隔 */
     }
 
